--- a/styles.css
+++ b/styles.css
@@ -241,7 +241,7 @@ input {
     width: fit-content;
 }
 
-.electric-element span {
+.electric-element span, .parallelgroupdeleter span, .parallelgroupadder span {
     height: 100%;
     display: flex;
     align-items: center;
